hphp/test/zend/good/ext/standard/tests/image/getimagesize.php.skipif
<?hh
	require_once('skipif_imagetype.inc');
