hphp/test/zend/bad/ext/mysqli/tests/019.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifconnectfailure.inc');
?>